--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>Gold Visibility Creator</title>
+    <script>
+        window.addEventListener('error', function (e) {
+            window.location.href = '/error.html#' + encodeURIComponent(e.message);
+        });
+    </script>
 </head>
 <body>
 <div id="app"></div>
