--- a/src/elm/Main.css
+++ b/src/elm/Main.css
@@ -1,3 +1,9 @@
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 .color-picker-container {
     width: 500px;
     height: 500px;
@@ -12,4 +18,14 @@
 .color-picker-container svg {
     width: 100%;
     height: 100%;
+}
+
+.btn {
+    @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+    @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+    @apply bg-blue-600;
 }
