Clean up webpack config

--- a/src/elm/Main.css
+++ b/src/elm/Main.css
@@ -7,11 +7,7 @@
 .color-picker-container {
     width: 500px;
     height: 500px;
-    background: #BFBFBF url('data:image/svg+xml,\
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" >\
-            <rect x="8" width="8" height="8" fill="white" />\
-            <rect y="8" width="8" height="8" fill="white" />\
-        </svg>');
+    background: #BFBFBF url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" ><rect x="8" width="8" height="8" fill="white" /><rect y="8" width="8" height="8" fill="white" /></svg>');
     background-size: 16px 16px;
 }
 
