--- a/src/elm/Main.css
+++ b/src/elm/Main.css
@@ -17,15 +17,11 @@
 }
 
 .btn {
-    @apply font-bold py-2 px-4 rounded;
+    @apply font-bold py-2 px-4 rounded font-sans;
 }
 .btn-blue {
     @apply bg-blue-500 text-white;
 }
 .btn-blue:hover {
     @apply bg-blue-600;
-}
-
-body {
-    @apply font-sans
 }
