--- a/src/elm/Main.css
+++ b/src/elm/Main.css
@@ -1,9 +1,3 @@
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
-
 .color-picker-container {
     width: 500px;
     height: 500px;
@@ -17,7 +11,7 @@
 }
 
 .btn {
-    @apply font-bold py-2 px-4 rounded font-sans;
+    @apply font-bold py-2 px-4 rounded;
 }
 .btn-blue {
     @apply bg-blue-500 text-white;
