--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -1,6 +1,23 @@
 .checkerboard {
-    width: 500px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     background: #BFBFBF url('../../../res/assets/checkerboard.svg');
     background-size: 16px 16px;
+    position: relative;
+}
+
+.drag-container {
+    width: 500px;
+    height: 200px;
+    padding: 5px 5px;
+}
+
+.knob {
+    z-index: 1;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    margin-left: -5px;
+    margin-top: -5px;
+    background-color: black;
 }
