--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -9,10 +9,15 @@
     width: 1.5rem;
     height: 1.5rem;
     border: 0.25rem solid white;
+    border-radius: 1.5rem;
+    overflow: hidden;
+}
+
+.slider {
+    width: 100%;
+    height: 1rem;
 }
 
 .hue-gradient {
-    width: 100%;
-    height: 1rem;
     background: linear-gradient(to right, hsl(0, 100%, 50%), hsl(60, 100%, 50%), hsl(120, 100%, 50%), hsl(180, 100%, 50%), hsl(240, 100%, 50%), hsl(300, 100%, 50%), hsl(360, 100%, 50%))
 }
