--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -18,6 +18,14 @@
     height: 1rem;
 }
 
+.slider-wrapper {
+    padding: 0.5rem 1rem;
+}
+
+.matrix-wrapper {
+    padding: 1rem;
+}
+
 .hue-gradient {
     background: linear-gradient(to right, hsl(0, 100%, 50%), hsl(60, 100%, 50%), hsl(120, 100%, 50%), hsl(180, 100%, 50%), hsl(240, 100%, 50%), hsl(300, 100%, 50%), hsl(360, 100%, 50%))
 }
