--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -1,8 +1,30 @@
+.picker {
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+}
+
+.picker .slider {
+    flex: 0 1 auto;
+    padding: 0.5rem 1rem;
+    height: 1rem;
+}
+
+.picker .matrix {
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
 .checkerboard {
     width: 100%;
     height: 100%;
     background: #BFBFBF url('../../../res/assets/checkerboard.svg');
     background-size: 1rem 1rem;
+}
+
+.fill {
+    width: 100%;
+    height: 100%;
 }
 
 .thumb {
@@ -11,19 +33,6 @@
     border: 0.25rem solid white;
     border-radius: 1.5rem;
     overflow: hidden;
-}
-
-.slider {
-    width: 100%;
-    height: 1rem;
-}
-
-.slider-wrapper {
-    padding: 0.5rem 1rem;
-}
-
-.matrix-wrapper {
-    padding: 1rem;
 }
 
 .hue-gradient {
