--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -6,8 +6,8 @@
 
 .picker .slider {
     flex: 0 1 auto;
-    padding: 0.5rem 1rem;
-    height: 1rem;
+    padding: 0.75rem 1rem;
+    height: 0.5rem;
 }
 
 .picker .matrix {
@@ -19,7 +19,11 @@
     width: 100%;
     height: 100%;
     background: #BFBFBF url('../../../res/assets/checkerboard.svg');
-    background-size: 1rem 1rem;
+    background-size: 0.5rem 0.5rem;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .fill {
@@ -27,11 +31,24 @@
     height: 100%;
 }
 
+.fill-hack {
+    composes: absolute;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    top: 1px;
+    left: 1px;
+}
+
+.background {
+    border-radius: 0.25rem;
+    overflow: hidden;
+}
+
 .thumb {
     width: 1.5rem;
     height: 1.5rem;
     border: 0.25rem solid white;
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     overflow: hidden;
 }
 
