--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -22,26 +22,27 @@
     background-size: 0.5rem 0.5rem;
 }
 
-.absolute {
-    position: absolute;
-}
-
 .fill {
     width: 100%;
     height: 100%;
 }
 
-.fill-hack {
-    composes: absolute;
-    width: calc(100% - 2px);
-    height: calc(100% - 2px);
-    top: 1px;
-    left: 1px;
-}
-
 .background {
     border-radius: 0.25rem;
     overflow: hidden;
+}
+
+.saturation-value-background {
+    composes: fill background;
+    position: absolute;
+}
+
+.saturation-value-background-hack {
+    composes: background;
+    position: absolute;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
+    left: 1px;
 }
 
 .thumb {
