--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -30,6 +30,13 @@
 .background {
     border-radius: 0.25rem;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.background * {
+    width: 100%;
+    height: 100%;
 }
 
 .thumb {
@@ -38,6 +45,11 @@
     border: 0.25rem solid white;
     border-radius: 1rem;
     overflow: hidden;
+}
+
+.thumb * {
+    width: 100%;
+    height: 100%;
 }
 
 .hue-gradient {
