--- a/src/app/Picker/Styles.css
+++ b/src/app/Picker/Styles.css
@@ -32,6 +32,7 @@
     height: 1.5rem;
     border: 0.25rem solid white;
     border-radius: 1rem;
+    background-color: white;
     overflow: hidden;
 }
 
