--- a/src/app/Picker/Shared.css
+++ b/src/app/Picker/Shared.css
@@ -4,12 +4,11 @@
     flex-flow: column;
 }
 
-.slider {
+.picker .slider {
     flex: 0 1 auto;
-    height: 0.5rem;
 }
 
-.matrix {
+.picker .matrix {
     flex: 1 1 auto;
 }
 
@@ -23,6 +22,10 @@
 
 .picker .slider + .slider {
     margin-top: 1.5rem;
+}
+
+.slider {
+    height: 0.5rem;
 }
 
 .background {
@@ -42,7 +45,6 @@
     height: 1.5rem;
     border: 0.25rem solid white;
     border-radius: 1rem;
-    background-color: white;
     overflow: hidden;
 }
 
@@ -52,6 +54,17 @@
 }
 
 .checkerboard {
+    position: relative;
+}
+
+.checkerboard:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
     background: #BFBFBF url('../../../res/assets/checkerboard.svg');
     background-size: 0.5rem 0.5rem;
 }
