--- a/src/app/Picker/Shared.css
+++ b/src/app/Picker/Shared.css
@@ -33,7 +33,6 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    position: absolute;
 }
 
 .background * {
@@ -72,4 +71,8 @@
 
 .hue-gradient {
     background: linear-gradient(to right, hsl(0, 100%, 50%), hsl(60, 100%, 50%), hsl(120, 100%, 50%), hsl(180, 100%, 50%), hsl(240, 100%, 50%), hsl(300, 100%, 50%), hsl(360, 100%, 50%))
+}
+
+.canvas {
+    position: absolute;
 }
