--- a/src/index.hbs
+++ b/src/index.hbs
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <title>Gold Visibility Creator</title>
+    {{#if htmlWebpackPlugin.options.includeErrorRedirect}}
     <script>
-        addEventListener('error', function () {
+        addEventListener('error.hbs', function () {
             location.href = 'error';
         });
     </script>
+    {{/if}}
 </head>
 <body>
     <div id="app"></div>
