--- a/src/index.hbs
+++ b/src/index.hbs
@@ -6,7 +6,14 @@
     <title>Gold Visibility Creator</title>
     {{#if htmlWebpackPlugin.options.includeErrorRedirect}}
     <script>
-        addEventListener('error', function () {
+        addEventListener('error', function (event) {
+            if (typeof event.error === 'object') {
+                if (typeof event.error.stack === 'string') {
+                    localStorage.setItem('error', event.error.stack);
+                } else if (event.error.message) {
+                    localStorage.setItem('error', event.error.message);
+                }
+            }
             location.href = 'error';
         });
     </script>
