Reject on image error with the URL of the image

--- a/src/error.hbs
+++ b/src/error.hbs
@@ -11,7 +11,9 @@
     <script>
         var container = document.getElementById('error');
         var error = localStorage.getItem('error');
-        container.innerText = error;
+        if (error) {
+            container.innerText = error;
+        }
     </script>
 </body>
 </html>
